Committed with NullExceptionError

--- a/Framework/test-output/old/Suite/reporter-output.html
+++ b/Framework/test-output/old/Suite/reporter-output.html
@@ -1,1 +1,5 @@
-<h2>Reporter output</h2><table></table>
+<h2>Reporter output</h2><table><tr><td>Configuration is ready from Excel file</td></tr>
+<tr><td>Configuration is ready to generate HTML reports</td></tr>
+<tr><td>Configuration setup is OK</td></tr>
+<tr><td>Trying to initiate browser and loding URL</td></tr>
+</table>
