--- a/Framework/test-output/old/Default suite/reporter-output.html
+++ b/Framework/test-output/old/Default suite/reporter-output.html
@@ -1,8 +1,5 @@
-<h2>Reporter output</h2><table><tr><td>Trying to fetch data from Excel file</td></tr>
-<tr><td>Trying to generate HTML reports</td></tr>
-<tr><td>HTML reports generated successfully</td></tr>
+<h2>Reporter output</h2><table><tr><td>Configuration is ready from Excel file</td></tr>
+<tr><td>Configuration is ready to generate HTML reports</td></tr>
+<tr><td>Configuration setup is OK</td></tr>
 <tr><td>Trying to initiate browser and loding URL</td></tr>
-<tr><td>Browser and URL is up and running</td></tr>
-<tr><td>Trying to capture screenshot on fail</td></tr>
-<tr><td>screenshot captured on fail</td></tr>
 </table>
