--- a/Framework/test-output/old/Suite/reporter-output.html
+++ b/Framework/test-output/old/Suite/reporter-output.html
@@ -2,4 +2,6 @@
 <tr><td>Configuration is ready to generate HTML reports</td></tr>
 <tr><td>Configuration setup is OK</td></tr>
 <tr><td>Trying to initiate browser and loding URL</td></tr>
+<tr><td>Browser and URL is up and running</td></tr>
+<tr><td>Trying to capture screenshot on fail</td></tr>
 </table>
